[package]
name = "s3-omni"
version = "0.1.0"
edition = "2024"
description = ""
keywords = ["s3", "multipart-upload", "presigned", "object-storage", "client"]
categories = [
    "api-bindings",
    "asynchronous",
    "web-programming::http-client",
    "wasm",
    "network-programming",
]
authors = ["Cody Wyatt Neiman (xangelix) <neiman@cody.to>"]
license = "MIT"
documentation = "https://docs.rs/s3-omni"
repository = "https://github.com/xangelix/s3-omni"

[package.metadata.cargo-shear]
ignored = ["getrandom"]

[features]
default = ["sdk", "reqwest"]
sdk = [
    "aws-config",
    "aws-sdk-s3",
    "aws-smithy-types",
    "http-body",
    "tokio/rt-multi-thread",
]
reqwest = ["dep:reqwest", "wasm-bindgen-futures", "wasm-streams", "web-sys"]

[dependencies]
async-trait = "0.1"
atomic-progress = "0.1"
bytes = "1"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
thiserror = "2"
tokio = { version = "1", default-features = false, features = [
    "io-util",
    "macros",
    "time",
] }
tokio-util = { version = "0", default-features = false }
tokio_with_wasm = { version = "0.9", features = ["macros", "rt", "rt-multi-thread", "time"], default-features = false }
tracing = "0.1"

# sdk
aws-config = { version = "1", default-features = false, optional = true }
aws-sdk-s3 = { version = "1", features = [
    "rt-tokio",
    "rustls",
], default-features = false, optional = true }
aws-smithy-types = { version = "1", default-features = false, optional = true }
http-body = { version = "1", default-features = false, optional = true }

# reqwest
reqwest = { version = "0.13", default-features = false, features = [
    "rustls",
    "stream",
], optional = true }

# rkyv
rkyv = { version = "0.8", features = [
    "std",
], default-features = false, optional = true }

# serde
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
# reqwest
wasm-bindgen-futures = { version = "0.4", optional = true }
wasm-streams = { version = "0.5", optional = true }
web-sys = { version = "0.3", features = ["File"], optional = true }

[dev-dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
rand = "0.10"

[target.'cfg(target_family = "wasm")'.dev-dependencies]
wasm-bindgen-test = "0.3"
